tests/snapshots/regression/nested__call_index_member_chain.snap
---
source: tests/regression_snapshots.rs
---
$ flux --no-cache tests/fixtures/nested/call_index_member_chain.flx
exit_code: 1

error[E004]: Undefined Variable

I can't find a value named `foo`.

  tests/fixtures/nested/call_index_member_chain.flx:1:1
  |
1 | foo(1, bar(2, baz(3)))[0].qux(4);
  | ^^^

Hint:
  Define it first: let foo = ...;


error[E415]: Missing Main Function (strict)

Strict mode requires `fn main()` for all programs.

  tests/fixtures/nested/call_index_member_chain.flx:1:1
  |
1 | foo(1, bar(2, baz(3)))[0].qux(4);
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Hint:
  Add `fn main() { ... }` as the program entrypoint.

Found 2 errors.
